<resources>
    <string name="app_name">CaT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="AppNameLogin">CaT - Login</string>
    <string name="app_version">version 1.0.0</string>
<<<<<<< HEAD
    <string name="bottom_navigation_menu_Home">Home</string>
    <string name="bottom_navigation_menu_Team">Team</string>
    <string name="bottom_navigation_menu_Evens">Evens</string>
    <string name="bottom_navigation_menu_files">Files</string>
    <string name="bottom_navigation_menu_News">News</string>
=======
    <string name="title_activity_bottom_bar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
>>>>>>> master
</resources>